--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -1,5 +1,6 @@
 @import "bootstrap/variables"
 @import "bootstrap/mixins"
+@import "bootstrap/variables"
 
 html
   background-color: #2f261d
@@ -191,3 +192,21 @@ table.table
 
 .flag-cursor
   cursor: crosshair
+
+
+// Fonts
+
+.header-font
+  font-family: $headings-font-family
+
+body[lang='ru'], body[lang|='zh'], body[lang='ja'], body[lang='pl'], body[lang='tr'], body[lang='cs'], body[lang='el'], body[lang='ro'], body[lang='vi'], body[lang='th'], body[lang='ko'], body[lang='sk'], body[lang='sl'], body[lang='bg'], body[lang='he'], body[lang='lt'], body[lang='sr'], body[lang='uk'], body[lang='hi'], body[lang='ur'], 
+  h1, h2, h3, h4, h5, h6
+    font-family: 'Open Sans Condensed', Impact, "Arial Narrow", "Arial", sans-serif
+    text-transform: uppercase
+    letter-spacing: -1px !important
+    
+  .header-font
+    font-family: 'Open Sans Condensed', Impact, "Arial Narrow", "Arial", sans-serif !important
+    text-transform: uppercase
+    letter-spacing: -1px !important
+   
