--- a/app/templates/base.jade
+++ b/app/templates/base.jade
@@ -10,28 +10,28 @@ body
         select.language-dropdown
 
         if me.get('anonymous') === false
-          button.btn.btn-primary.navbuttontext#logout-button(data-i18n="login.log_out") Log Out
-          a.btn.btn-primary.navbuttontext(href="/account/profile/#{me.id}")
+          button.btn.btn-primary.navbuttontext.header-font#logout-button(data-i18n="login.log_out") Log Out
+          a.btn.btn-primary.navbuttontext.header-font(href="/account/profile/#{me.id}")
             div.navbuttontext-user-name
               | #{me.displayName()}
             i.icon-cog.icon-white.big
 
         else
-          button.btn.btn-primary.navbuttontext(data-toggle="coco-modal", data-target="modal/signup", data-i18n="login.sign_up") Create Account
-          button.btn.btn-primary.navbuttontext(data-toggle="coco-modal", data-target="modal/login", data-i18n="login.log_in") Log In
+          button.btn.btn-primary.navbuttontext.header-font(data-toggle="coco-modal", data-target="modal/signup", data-i18n="login.sign_up") Create Account
+          button.btn.btn-primary.navbuttontext.header-font(data-toggle="coco-modal", data-target="modal/login", data-i18n="login.log_in") Log In
 
         ul(class='navbar-link-text').nav.navbar-nav.pull-right
           li.play
-            a(href='/play', data-i18n="nav.navbar-nav.play") Levels
+            a.header-font(href='/play', data-i18n="nav.navbar-nav.play") Levels
           li.editor
-            a(href='/editor', data-i18n="nav.navbar-nav.editor") Editor
+            a.header-font(href='/editor', data-i18n="nav.navbar-nav.editor") Editor
           li.blog
-            a(href='http://blog.codecombat.com/', data-i18n="nav.navbar-nav.blog") Blog
+            a.header-font(href='http://blog.codecombat.com/', data-i18n="nav.navbar-nav.blog") Blog
           li.forum
-            a(href='http://discourse.codecombat.com/', data-i18n="nav.navbar-nav.forum") Forum
+            a.header-font(href='http://discourse.codecombat.com/', data-i18n="nav.navbar-nav.forum") Forum
           if me.isAdmin()
             li.admin
-              a(href='/admin', data-i18n="nav.navbar-nav.admin") Admin
+              a.header-font(href='/admin', data-i18n="nav.navbar-nav.admin") Admin
 
   block outer_content
     #outer-content-wrapper
