--- a/app/templates/play/level/modal/editor_config.jade
+++ b/app/templates/play/level/modal/editor_config.jade
@@ -13,7 +13,7 @@ block modal-body-content
       span.help-block(data-i18n="play_level.editor_config_language_description") Define the programming language you want to code in.
     .form-group.select-group
       label.control-label(for="tome-key-bindings" data-i18n="play_level.editor_config_keybindings_label") Key Bindings
-      select#tome-key-bindings(name="keyBindings", type="checkbox", checked=multiplayer)
+      select#tome-key-bindings(name="keyBindings")
         option(value="default" selected=(keyBindings === "default") data-i18n="play_level.editor_config_keybindings_default") Default (Ace)
         option(value="vim" selected=(keyBindings === "vim")) Vim
         option(value="emacs" selected=(keyBindings === "emacs")) Emacs
