Updated Mondo Bizarro i18n comma.

--- a/app/templates/contribute/artisan.jade
+++ b/app/templates/contribute/artisan.jade
@@ -24,10 +24,9 @@ block content
           | If you have visions of campaigns spanning for-loops to
         span  
         a(href="http://stackoverflow.com/questions/758088/seeking-contrived-example-code-continuations/758105#758105")
-          |  Mondo Bizzaro 
-        span  
+          | Mondo Bizzaro
         span(data-i18n="contribute.artisan_introduction_suf")
-          | to then this class might be for you.
+          | , then this class might be for you.
     
       h4(data-i18n="contribute.class_attributes") Class Attributes
       ul
