--- a/app/templates/contribute/contribute.jade
+++ b/app/templates/contribute/contribute.jade
@@ -94,10 +94,9 @@ block content
             | of campaigns spanning for-loops to
           span  
           a(href="http://stackoverflow.com/questions/758088/seeking-contrived-example-code-continuations/758105#758105")
-            |  Mondo Bizzaro 
-          span  
+            | Mondo Bizzaro
           span(data-i18n="contribute.artisan_summary_suf")
-            | then this class is for you.
+            | , then this class is for you.
 
         a(href="/contribute/artisan")
           p.lead(data-i18n="contribute.more_about_artisan")
