added two programming quotes

--- a/app/templates/play/level/level_loading.jade
+++ b/app/templates/play/level/level_loading.jade
@@ -35,6 +35,8 @@
     strong.tip.rare(data-i18n='play_level.tip_no_try') Do. Or do not. There is no try. - Yoda
     strong.tip.rare(data-i18n='play_level.tip_patience') Patience you must have, young Padawan. - Yoda
     strong.tip.rare(data-i18n='play_level.tip_documented_bug') A documented bug is not a bug; it is a feature.
+    strong.tip.rare(data-i18n='play_level.tip_talk_is_cheap') Talk is cheap. Show me the code. - Linus Torvalds
+    strong.tip.rare(data-i18n='play_level.tip_first_language') The most disastrous thing that you can ever learn is your first programming language. - Alan Kay
     strong.tip.rare
       span(data-i18n='play_level.tip_harry') Yer a Wizard, 
       span= me.get('name') || 'Anoner'
