--- a/app/styles/play/spectate.sass
+++ b/app/styles/play/spectate.sass
@@ -23,7 +23,7 @@
       line-height: 15px
       left: 0
 
-  max-width: 1920px
+  //max-width: 1920px
   margin: 0 auto
   @include user-select(none)
   
@@ -31,6 +31,7 @@
     max-height: 1284px
 
   .level-content
+    max-width: 1920px
     position: relative
     margin: 0px auto
 
