--- a/app/templates/base.jade
+++ b/app/templates/base.jade
@@ -42,7 +42,7 @@ body
               p If this is showing, you dun goofed
 
   block footer
-    .footer
+    .footer.clearfix
       .content
         p.footer-link-text
           if pathname == "/"
