--- a/app/styles/play/ladder.sass
+++ b/app/styles/play/ladder.sass
@@ -70,3 +70,8 @@
 
   #must-log-in button
     margin-right: 10px
+
+@media only screen and (max-width: 800px)
+  #ladder-view
+    #level-column img
+      width: 100%
