--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -7,7 +7,8 @@ block content
   #trailer-wrapper
     <iframe width="920" height="518" src="//www.youtube.com/embed/1zjaA13k-dA?rel=0&controls=0&modestbranding=1&showinfo=0&iv_load_policy=3&vq=hd720&wmode=transparent" frameborder="0" wmode="opaque" allowfullscreen></iframe>
     img(src="/images/pages/home/video_border.png")
-  
+  #mobile-trailer-wrapper
+    <iframe src="//www.youtube.com/embed/1zjaA13k-dA" frameborder="0" width="280" height="158"></iframe> 
   hr
 
   .alert.alert-danger.lt-ie10
@@ -21,7 +22,7 @@ block content
       strong(data-i18n="home.old_browser") Uh oh, your browser is too old to run CodeCombat. Sorry!
       br
       span(data-i18n="home.old_browser_suffix") You can try anyway, but it probably won't work.
-
+  
   a#beginner-campaign(href="/play/level/rescue-mission")
     div.game-mode-wrapper
       if isEnglish
