Set up a new loading/progress system for views.

--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -167,7 +167,15 @@ a[data-toggle="modal"]
     width: 50%
     margin: 0 25%
   .progress-bar
-    width: 100%
+    width: 0%
+    transition: width 0.1s ease
+    
+  .errors .alert
+    padding: 5px
+    display: block
+    margin: 10px auto
+    .btn
+      margin-left: 10px
   
 .modal
   .wait
