--- a/app/templates/loading.jade
+++ b/app/templates/loading.jade
@@ -1,4 +1,6 @@
 .loading-screen
   h1(data-i18n="common.loading") Loading...
-  .progress.progress-striped.active
+  .progress
     .progress-bar
+      
+  .errors
