Added score histogram to ladder tab

--- a/app/styles/play/ladder/ladder_tab.sass
+++ b/app/styles/play/ladder/ladder_tab.sass
@@ -4,3 +4,23 @@
     white-space: nowrap
     overflow: hidden
     text-overflow: ellipsis
+    
+  .bar rect
+    fill: steelblue
+    shape-rendering: crispEdges
+    
+  .bar text
+    fill: #fff
+    
+  .specialbar rect
+    fill: red
+    
+    
+  .axis path, .axis line
+    fill: none
+    stroke: #000
+    shape-rendering: crispEdges
+  .x.axis
+    color: red
+    
+    
