Improved styling on graphs

--- a/app/styles/play/ladder/ladder_tab.sass
+++ b/app/styles/play/ladder/ladder_tab.sass
@@ -13,14 +13,21 @@
     fill: #fff
     
   .specialbar rect
-    fill: red
+    fill: #555555
     
     
   .axis path, .axis line
     fill: none
-    stroke: #000
+    stroke: #555555
     shape-rendering: crispEdges
-  .x.axis
-    color: red
+    
+  .humans-bar
+    fill: #bf3f3f
+    shape-rendering: crispEdges
+  .ogres-bar
+    fill: #3f44bf
+    shape-rendering: crispEdges
+  text
+    fill: #555555
     
     
