--- a/app/styles/play/ladder/my_matches_tab.sass
+++ b/app/styles/play/ladder/my_matches_tab.sass
@@ -1,7 +1,7 @@
 #my-matches-tab-view
   .axis path, .axis line
     fill: none
-    stroke: #000
+    stroke: #555
     shape-rendering: crispEdges
   .x.axis.path
     display: none
@@ -10,4 +10,20 @@
     fill: none
     stroke: steelblue
     stroke-width: 1.5px
+    
+  .humans-line
+    fill: none
+    stroke: #bf3f3f
+    stroke-width: 1.5px
+   
+  .ogres-line
+    fill: none
+    stroke: #3f44bf
+    stroke-width: 1.5px
 
+  .axis text
+    stroke: none
+    fill: #555555
+    shape-rendering: crispEdges
+    
+    
