Added rank/number of sessions text

--- a/app/styles/play/ladder/ladder_tab.sass
+++ b/app/styles/play/ladder/ladder_tab.sass
@@ -30,4 +30,13 @@
   text
     fill: #555555
     
+  .rank-text
+    font-size: 15px
+    fill: #555555
+    
+  .humans-rank-text
+    fill: #bf3f3f
+    
+  .ogres-rank-text
+    fill: #3f44bf
     
