--- a/app/templates/employers.jade
+++ b/app/templates/employers.jade
@@ -32,3 +32,29 @@ block content
       h4 Skill: from interns and entry level to senior developers and management
       h4 Technologies: just about everything
       h4 Countries: USA, Canada, Australia, and many more
+
+  p If you click on a profile, you can see:
+  ul
+    li extra links
+    li extra skill tags
+    li self description
+    li work experience description: list of company name, job title, dates
+    li educational experience: list of school name, degree & major, dates
+    li our notes
+    li links to CodeCombat code in action
+    li contact modal link
+    li visa needs
+    li more location
+    li projects: list of pic, name, description, link (like http://www.folyo.me/designers/stanislav-udotov)
+
+  table.table.table-condensed.table-hover.table-responsive.tablesorter
+    thead
+      tr
+        th Name
+        th Location
+        th Looking For
+        // Remote, Full-time, Part-time, Contracting, Internship
+        th Top 5 Skills
+        th Yrs Exp
+        th Last Updated
+        th Current Job
