--- a/app/templates/contribute/diplomat.jade
+++ b/app/templates/contribute/diplomat.jade
@@ -80,7 +80,7 @@ block content
           li French - Xeonarno, Elfisen, Armaldio, MartinDelille, pstweb, veritable, jaybi, xavismeh, Anon, Feugy
           li Hungarian - ferpeter, csuvsaregal, atlantisguru, Anon
           li Japanese - g1itch, kengos
-          li Chinese - Adam23, spacepope, yangxuan8282
+          li Chinese - Adam23, spacepope, yangxuan8282, Cheng Zheng
           li Polish - Anon, Kacper Ciepielewski
           li Danish - Einar Rasmussen, sorsjen, Randi Hillerøe, Anon
           li Slovak - Anon
