Fixed the background for spectate view

--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -97,13 +97,15 @@ a[data-toggle="modal"]
 
 .modal-dialog
   padding: 5px
-
+  margin-top: 0px !important
+  margin-bottom: 0px !important
+  padding-top: 30px
   .background-wrapper
     background: url("/images/pages/base/modal_background.png")
     background-size: 100% 100%
     border: 0
     @include box-shadow(0 0 0 #000)
-    position: absolute
+    //position: absolute
     width: 99%
 
   .modal-content
