Moved nanoscroller to bower components and related fixes.

--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -5,6 +5,9 @@
 html
   background-color: #2f261d
 
+body
+  position: absolute !important
+
 // https://github.com/twbs/bootstrap/issues/9237 -- need a version that's not !important
 .secret
   display: none
