--- a/app/templates/play/level/hud.jade
+++ b/app/templates/play/level/hud.jade
@@ -9,8 +9,8 @@
     .thang-name
   
   .thang-actions.thang-elem
-    .nano-table
-      .nano-table-content
+    .nano
+      .nano-content
         .action-header(data-i18n="play_level.action_timeline") Action Timeline
         .table-container
           .progress-arrow.progress-indicator
