--- a/app/templates/editor/level/save.jade
+++ b/app/templates/editor/level/save.jade
@@ -5,16 +5,16 @@ block modal-body-content
   if levelNeedsSave
     form#save-level-form.form
       .form-group
-        label.control-label(for="level-commit-message") Commit Message
+        label.control-label(for="level-commit-message", data-i18n="general.commit_msg") Commit Message
         textarea.form-control#level-commit-message(name="commit-message", type="text")
       if level.isPublished()
         .form-group.checkbox
-          label.control-label(for="level-version-is-major") Major Changes?
+          label.control-label(for="level-version-is-major", data-i18n="versions.new_major_version") New Major Version
           input#level-version-is-major(name="version-is-major", type="checkbox")
-          span.help-block (Could this update break old solutions of the level?)
+          span.help-block(data-i18n="versions.update_break_level") (Could this update break old solutions of the level?)
       if !level.isPublished()
         .form-group.checkbox
-          label.control-label(for="level-publish") Publish This Level (irreversible)?
+          label.control-label(for="level-publish", data-i18n="editor.level_publish") Publish This Level (irreversible)?
           input#level-publish(name="publish", type="checkbox")
 
   if modifiedComponents.length
@@ -27,13 +27,13 @@ block modal-body-content
       input(name="component-original", type="hidden", value=component.get('original'))
       input(name="component-parent-major-version", type="hidden", value=component.get('version').major)
       .form-group
-        label.control-label(for=id + "-commit-message") Commit Message
+        label.control-label(for=id + "-commit-message", data-i18n="general.commit_msg") Commit Message
         textarea.form-control(id=id + "-commit-message", name="commit-message", type="text")
       if component.isPublished()
         .form-group.checkbox
-          label.control-label(for=id + "-version-is-major") Major Changes?
+          label.control-label(for=id + "-version-is-major", data-i18n="versions.new_major_version") New Major Version
           input(id=id + "-version-is-major", name="version-is-major", type="checkbox")
-          span.help-block (Could this update break anything depending on this Component?)
+          span.help-block(data-i18n="versions.update_break_component") (Could this update break anything depending on this Component?)
 
   if modifiedSystems.length
     hr
@@ -45,10 +45,10 @@ block modal-body-content
       input(name="system-original", type="hidden", value=system.get('original'))
       input(name="system-parent-major-version", type="hidden", value=system.get('version').major)
       .form-group
-        label.control-label(for=id + "-commit-message") Commit Message
+        label.control-label(for=id + "-commit-message", data-i18n="general.commit_msg") Commit Message
         textarea.form-control(id=id + "-commit-message", name="commit-message", type="text")
       if system.isPublished()
         .form-group.checkbox
-          label.control-label(for=id + "-version-is-major") Major Changes?
+          label.control-label(for=id + "-version-is-major", data-i18n="versions.new_major_version") New Major Version
           input(id=id + "-version-is-major", name="version-is-major", type="checkbox")
-          span.help-block (Could this update break anything depending on this System?)
+          span.help-block(data-i18n="versions.update_break_system") (Could this update break anything depending on this System?)
