--- a/app/templates/modal/revert.jade
+++ b/app/templates/modal/revert.jade
@@ -10,4 +10,7 @@ block modal-body-content
         td
           | #{model.type()}: #{model.get('name')}
         td
-          button(value=model.id) Revert
+          button(value=model.id, data-i18n="editor.revert") Revert
+
+block modal-footer-content
+  button.btn(data-dismiss="modal", data-i18n="common.cancel") Cancel
