More work on the job profiles.

--- a/app/styles/account/profile.sass
+++ b/app/styles/account/profile.sass
@@ -5,11 +5,26 @@
       margin-right: 5px
   
   img.img-thumbnail
-    margin: 20px 0
+    margin: 5px 20px 20px 20px
     
-  li
-    list-style: none
-    
-  ul
+  ul.links, ul.projects
     margin: 0
     padding: 0
+
+    li
+      list-style: none
+
+  .profile-header-container
+    h1
+      margin-bottom: 0px
+
+  .project-image
+    width: 360px
+    height: 270px
+    background-size: cover
+    background-repeat: no-repeat
+    background-position: center
+
+  ul.projects
+    li
+      margin-top: 20px
