Work on thang tab

--- a/app/templates/editor/level/component/edit.jade
+++ b/app/templates/editor/level/component/edit.jade
@@ -15,7 +15,7 @@ nav.navbar.navbar-default(role='navigation')
         li
           a(href="#component-settings" data-toggle="tab" data-i18n="editor.level_component_settings") Settings
       ul.nav.navbar-nav.navbar-left
-        li(data-i18n="general.history").btn.btn-primary.navbar-btn#history-button History
+        li(data-i18n="general.version_history").btn.btn-primary.navbar-btn#history-button Version History
       ul.nav.navbar-nav.navbar-right
         li(data-i18n="editor.level_component_btn_new").btn.btn-primary.navbar-btn#create-new-component-button Create New Component
 
