Finished most of basic features for job profiles.

--- a/app/styles/account/profile.sass
+++ b/app/styles/account/profile.sass
@@ -28,3 +28,10 @@
   ul.projects
     li
       margin-top: 20px
+
+  .approved, .not-approved
+    display: none
+
+  #job-profile-notes
+    width: 100%
+    height: 100px
