--- a/app/templates/employers.jade
+++ b/app/templates/employers.jade
@@ -44,6 +44,8 @@ block content
           th Yrs Exp
           th Last Updated
           th Current Job
+          if me.isAdmin()
+            th ✓?
   
       tbody
         for candidate, index in candidates
@@ -52,10 +54,11 @@ block content
           tr(data-candidate-id=candidate.id)
             td
               if authorized
-                img(src=candidate.getPhotoURL(), alt=profile.name, title=profile.name, width=50)
+                // Want image, but it doesn't work without loading every Gravatar profile
+                //img(src=candidate.getPhotoURL(), alt=profile.name, title=profile.name, width=50)
                 p= profile.name
               else
-                img(src="/images/pages/contribute/archmage.png", alt="", title="Sign up as an employer to see our candidates", width=50)
+                //img(src="/images/pages/contribute/archmage.png", alt="", title="Sign up as an employer to see our candidates", width=50)
                 p Developer ##{index + 1}
             if profile.country == 'USA'
               td= profile.city
@@ -76,3 +79,8 @@ block content
             else
               td
                 em Employer sign-up required.
+            if me.isAdmin()
+              if candidate.get('jobProfileApproved')
+                td ✓
+              else
+                td ✗
