--- a/app/styles/play/level/loading.sass
+++ b/app/styles/play/level/loading.sass
@@ -22,7 +22,9 @@
   position: absolute
   z-index: 20
   $UNVEIL_TIME: 1.2s
-  pointer-events: none
+
+  &.unveiled
+    pointer-events: none
   
   .loading-details
     position: absolute
