--- a/app/templates/modal/login.jade
+++ b/app/templates/modal/login.jade
@@ -23,7 +23,7 @@ block modal-footer
     div
       .fb-login-button(data-show-faces="false", data-width="200", data-max-rows="1", data-scope="email")
     div
-      .gplus-login-button#gplus-login-button
+      .gplus-login-button
     div
       a(data-toggle="coco-modal", data-target="modal/signup", data-i18n="login.sign_up")#link-to-signup create new account
       span , 
