Minor corrections in format

--- a/app/templates/modal/signup.jade
+++ b/app/templates/modal/signup.jade
@@ -35,7 +35,7 @@ block modal-footer
     div
       button.btn.btn-primary.btn-large#signup-button(data-i18n="signup.sign_up") Sign Up
     div.social-login-text.
-      .Or you can login directly through Facebook or G+
+      Or you can login directly through Facebook or G+
 
   .modal-footer.network-logins
     div
